--- a/clean_router_project/__brick__/{{project_name.snakeCase()}}/pubspec.yaml
+++ b/clean_router_project/__brick__/{{project_name.snakeCase()}}/pubspec.yaml
@@ -8,13 +8,19 @@ environment:
 
 dependencies:
   bloc: ^8.1.1
+  cached_network_image: ^3.2.0
+  dartz: ^0.10.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  flutter_dotenv: ^5.0.2
+  flutter_inappwebview: ^5.7.2+3
   flutter_localizations:
     sdk: flutter
-  go_router: ^6.5.2
-  intl: ^0.17.0
+  go_router: ^7.0.1
+  http: ^0.13.5
+  intl: ^0.18.0
   json_annotation: ^4.8.0
 
   
@@ -26,7 +32,7 @@ dev_dependencies:
     sdk: flutter
   json_serializable: ^6.6.1
   mocktail: ^0.3.0
-  very_good_analysis: ^3.1.0
+  very_good_analysis: ^5.0.0
  
 
 flutter:
