--- a/clean_bloc_feature/hooks/pubspec.yaml
+++ b/clean_bloc_feature/hooks/pubspec.yaml
@@ -1,10 +1,8 @@
 name: clean_bloc_feature_hooks
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.1.0 <4.0.0"
 
-dependencies: 
-  mason: ^0.1.0-dev.48
+dependencies:
+  mason: ">=0.1.0-dev.60 <0.1.0"
   recase: ^4.1.0
-  
-  
