--- a/clean_bloc_route/hooks/pubspec.yaml
+++ b/clean_bloc_route/hooks/pubspec.yaml
@@ -3,7 +3,6 @@ name: clean_bloc_route_hooks
 environment:
   sdk: ">=3.1.0 <4.0.0"
 
-dependencies: 
-  mason: ^0.1.0-dev.48
+dependencies:
+  mason: ">=0.1.0-dev.60 <0.1.0"
   recase: ^4.1.0
-  
